solved overflow by adding scrollbar, have to add some functionality to some buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,25 +43,44 @@ body{
 
 
 .answerPanel{
+    
     height: 150px;
     font-size: 40px;
     font-weight: 300;
     text-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    display: grid;
+    align-content: end;
+    text-align: end;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
-    padding-bottom: 10px;
+    overflow: auto;
+    text-overflow: clip;
+    padding-bottom: 6px;
+    padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 5.5px;
 }
 
-.wholeExpression{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+.answerPanel::-webkit-scrollbar{
+    height: 6px;
 }
+
+.answerPanel::-webkit-scrollbar-thumb{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+    transition: background-color 0.3s;
+
+}
+
+.answerPanel::-webkit-scrollbar-thumb:hover{
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.answerPanel::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+
+
 
 
 .separator{
